# cover-float

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  config.svh  pyproject.toml
coverage/: coverfloat.sv  coverfloat_coverage.sv  coverfloat_interface.sv  coverfloat_pkg.sv  macros.svh
coverage/covergroups/: B1.svh  B10.svh  B11.svh  B12.svh  B14.svh  B15.svh  B16.svh  B17.svh  B18.svh  B19.svh  B1_F32.svh  B2.svh  B21.svh  B22.svh  B23.svh  B24.svh  B28.svh  B3.svh  B4.svh  B5.svh  B6.svh  B9.svh
coverage/covergroups/bins_templates/: F32_basic_types_bins.svh  FP_result_op_bins.svh  FP_src1_op_bins.svh  FP_src2_op_bins.svh  FP_src3_op_bins.svh
docs/: B12.adoc  B13.adoc  B16.adoc  B19.adoc  B2.adoc  B21.adoc  B3.adoc  B9.adoc
examples/dpitest/: transcript
examples/dpitest/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
examples/dpitest/work/_dpi/: dpi.tfdb
script/: B1.py  B10.py  B14.py  B9.py  coverfloat.py  parse_testvectors.py
sim/: run.do
src/: coverfloat.c  coverfloat.h
src/c/: coverfloat.c  coverfloat.cpp  coverfloat.h  coverfloat.hpp  main.cpp  reference.cpp  unmodified_reference.cpp
src/cover_float/: __init__.py  _reference.pyi  cli.py
src/cover_float/common/: __init__.py  constants.py  log.py  util.py
src/cover_float/reference/: __init__.py  impl.py
src/cover_float/scripts/: __init__.py  parse_testvectors.py  postprocess.py
src/cover_float/testgen/: B1.py  B10.py  B11.py  B12.py  B13.py  B14.py  B15.py  B16.py  B17.py  B18.py  B19.py  B2.py  B20.py  B21.py  B25.py  B26.py  B27.py  B28.py  B29.py  B3.py  B4.py  B5.py  B6.py  B7.py  B8.py  B9.py  __init__.py  model.py
src/submodules/config_fix/: config.h
